# qt-cmake-widgets-quick

./: .gitignore  README.md
qt-quick-cmake/: CMakeLists.txt  main.cpp  main.qml
qt-widgets-cmake/: CMakeLists.txt  mainwindow.ui
